fkscript/src/antlr/FKVMParser.cs
// $ANTLR 3.0.1 D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g 2007-09-09 13:38:55

using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;




using Antlr.Runtime.Tree;

public class FKVMParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"PROGRAMA", 
		"DECLARACION", 
		"DECLARACIONPARAM", 
		"LISTADECLARACIONESAPI", 
		"DECLARACIONAPI", 
		"ASIGNACION", 
		"MENOSUNARIO", 
		"LISTAINSTRUCCIONES", 
		"LLAMADA", 
		"LISTAEXPRESIONES", 
		"LISTAPARAMETROS", 
		"IDENT", 
		"LIT_ENTERO", 
		"LIT_REAL", 
		"LIT_CADENA", 
		"LIT_LOGICO", 
		"LETRA", 
		"DIGITO", 
		"COMENTARIO", 
		"WS", 
		"'api'", 
		"'('", 
		"')'", 
		"';'", 
		"'program'", 
		"'{'", 
		"'}'", 
		"','", 
		"'='", 
		"'if'", 
		"'else'", 
		"'while'", 
		"'return'", 
		"'int'", 
		"'float'", 
		"'string'", 
		"'bool'", 
		"'void'", 
		"'||'", 
		"'&&'", 
		"'=='", 
		"'!='", 
		"'>'", 
		"'<'", 
		"'>='", 
		"'<='", 
		"'+'", 
		"'-'", 
		"'*'", 
		"'/'", 
		"'!'"
    };

    public const int DIGITO = 21;
    public const int DECLARACIONAPI = 8;
    public const int ASIGNACION = 9;
    public const int LISTADECLARACIONESAPI = 7;
    public const int LIT_ENTERO = 16;
    public const int LISTAINSTRUCCIONES = 11;
    public const int LLAMADA = 12;
    public const int EOF = -1;
    public const int LISTAEXPRESIONES = 13;
    public const int LIT_CADENA = 18;
    public const int LISTAPARAMETROS = 14;
    public const int WS = 23;
    public const int DECLARACIONPARAM = 6;
    public const int MENOSUNARIO = 10;
    public const int COMENTARIO = 22;
    public const int DECLARACION = 5;
    public const int PROGRAMA = 4;
    public const int IDENT = 15;
    public const int LIT_REAL = 17;
    public const int LETRA = 20;
    public const int LIT_LOGICO = 19;
    
    
        public FKVMParser(ITokenStream input) 
    		: base(input)
    	{
    		InitializeCyclicDFAs();
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();
    
    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set { this.adaptor = value; }
    }

    override public string[] TokenNames
	{
		get { return tokenNames; }
	}

    override public string GrammarFileName
	{
		get { return "D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g"; }
	}

    
    	public Dictionary<string,Symbol> symtable = new Dictionary<string,Symbol>();
    	public int numVars = 0;
    	public int numErrors = 0;
    	
    	public FKVM.FKVMCompiler.ReportarError reportarError;
    
    	public override string GetErrorMessage(RecognitionException e, string[] tokenNames)
    	{
    		numErrors++;
    		
    		string msg = base.GetErrorMessage(e,tokenNames);
    		
    		if(reportarError != null)
    			reportarError("Line " + e.Line + ":" + e.CharPositionInLine + " " + msg);
    		
    		return msg;
    	}


    public class programa_return : ParserRuleReturnScope 
    {
        internal FkvmAST tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start programa
    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:61:1: programa : declaraciones_api principal -> ^( PROGRAMA declaraciones_api principal ) ;
    public programa_return programa() // throws RecognitionException [1]
    {   
        programa_return retval = new programa_return();
        retval.start = input.LT(1);
        
        FkvmAST root_0 = null;
    
        declaraciones_api_return declaraciones_api1 = null;

        principal_return principal2 = null;
        
        
        RewriteRuleSubtreeStream stream_principal = new RewriteRuleSubtreeStream(adaptor,"rule principal");
        RewriteRuleSubtreeStream stream_declaraciones_api = new RewriteRuleSubtreeStream(adaptor,"rule declaraciones_api");
        try 
    	{
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:61:10: ( declaraciones_api principal -> ^( PROGRAMA declaraciones_api principal ) )
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:61:12: declaraciones_api principal
            {
            	PushFollow(FOLLOW_declaraciones_api_in_programa110);
            	declaraciones_api1 = declaraciones_api();
            	followingStackPointer_--;
            	
            	stream_declaraciones_api.Add(declaraciones_api1.Tree);
            	PushFollow(FOLLOW_principal_in_programa112);
            	principal2 = principal();
            	followingStackPointer_--;
            	
            	stream_principal.Add(principal2.Tree);
            	
            	// AST REWRITE
            	// elements:          principal, declaraciones_api
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	retval.tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
            	
            	root_0 = (FkvmAST)adaptor.GetNilNode();
            	// 61:40: -> ^( PROGRAMA declaraciones_api principal )
            	{
            	    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:61:43: ^( PROGRAMA declaraciones_api principal )
            	    {
            	    FkvmAST root_1 = (FkvmAST)adaptor.GetNilNode();
            	    root_1 = (FkvmAST)adaptor.BecomeRoot(adaptor.Create(PROGRAMA, "PROGRAMA"), root_1);
            	    
            	    adaptor.AddChild(root_1, stream_declaraciones_api.Next());
            	    adaptor.AddChild(root_1, stream_principal.Next());
            	    
            	    adaptor.AddChild(root_0, root_1);
            	    }
            	
            	}
            	

            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (FkvmAST)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end programa

    public class declaraciones_api_return : ParserRuleReturnScope 
    {
        internal FkvmAST tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start declaraciones_api
    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:1: declaraciones_api : (lista+= declaracion_api )* -> ^( LISTADECLARACIONESAPI ( $lista)* ) ;
    public declaraciones_api_return declaraciones_api() // throws RecognitionException [1]
    {   
        declaraciones_api_return retval = new declaraciones_api_return();
        retval.start = input.LT(1);
        
        FkvmAST root_0 = null;
    
        IList list_lista = null;
        RuleReturnScope lista = null;
        RewriteRuleSubtreeStream stream_declaracion_api = new RewriteRuleSubtreeStream(adaptor,"rule declaracion_api");
        try 
    	{
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:19: ( (lista+= declaracion_api )* -> ^( LISTADECLARACIONESAPI ( $lista)* ) )
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:21: (lista+= declaracion_api )*
            {
            	// D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:21: (lista+= declaracion_api )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);
            	    
            	    if ( (LA1_0 == 24) )
            	    {
            	        alt1 = 1;
            	    }
            	    
            	
            	    switch (alt1) 
            		{
            			case 1 :
            			    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:22: lista+= declaracion_api
            			    {
            			    	PushFollow(FOLLOW_declaracion_api_in_declaraciones_api134);
            			    	lista = declaracion_api();
            			    	followingStackPointer_--;
            			    	
            			    	stream_declaracion_api.Add(lista.Tree);
            			    	if (list_lista == null) list_lista = new ArrayList();
            			    	list_lista.Add(lista);

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop1;
            	    }
            	} while (true);
            	
            	loop1:
            		;	// Stops C# compiler whinging that label 'loop1' has no statements

            	
            	// AST REWRITE
            	// elements:          lista
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  lista
            	retval.tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
            	RewriteRuleSubtreeStream stream_lista = new RewriteRuleSubtreeStream(adaptor, "token lista", list_lista);
            	root_0 = (FkvmAST)adaptor.GetNilNode();
            	// 63:47: -> ^( LISTADECLARACIONESAPI ( $lista)* )
            	{
            	    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:50: ^( LISTADECLARACIONESAPI ( $lista)* )
            	    {
            	    FkvmAST root_1 = (FkvmAST)adaptor.GetNilNode();
            	    root_1 = (FkvmAST)adaptor.BecomeRoot(adaptor.Create(LISTADECLARACIONESAPI, "LISTADECLARACIONESAPI"), root_1);
            	    
            	    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:63:74: ( $lista)*
            	    while ( stream_lista.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, ((ParserRuleReturnScope)stream_lista.Next()).Tree);
            	    
            	    }
            	    stream_lista.Reset();
            	    
            	    adaptor.AddChild(root_0, root_1);
            	    }
            	
            	}
            	

            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (FkvmAST)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end declaraciones_api

    public class declaracion_api_return : ParserRuleReturnScope 
    {
        internal FkvmAST tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start declaracion_api
    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:65:1: declaracion_api : 'api' tipo IDENT '(' lista_decl ')' ';' -> ^( DECLARACIONAPI tipo IDENT ) ;
    public declaracion_api_return declaracion_api() // throws RecognitionException [1]
    {   
        declaracion_api_return retval = new declaracion_api_return();
        retval.start = input.LT(1);
        
        FkvmAST root_0 = null;
    
        IToken string_literal3 = null;
        IToken IDENT5 = null;
        IToken char_literal6 = null;
        IToken char_literal8 = null;
        IToken char_literal9 = null;
        tipo_return tipo4 = null;

        lista_decl_return lista_decl7 = null;
        
        
        FkvmAST string_literal3_tree=null;
        FkvmAST IDENT5_tree=null;
        FkvmAST char_literal6_tree=null;
        FkvmAST char_literal8_tree=null;
        FkvmAST char_literal9_tree=null;
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_24 = new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_25 = new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26 = new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27 = new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleSubtreeStream stream_tipo = new RewriteRuleSubtreeStream(adaptor,"rule tipo");
        RewriteRuleSubtreeStream stream_lista_decl = new RewriteRuleSubtreeStream(adaptor,"rule lista_decl");
        try 
    	{
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:65:17: ( 'api' tipo IDENT '(' lista_decl ')' ';' -> ^( DECLARACIONAPI tipo IDENT ) )
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:65:19: 'api' tipo IDENT '(' lista_decl ')' ';'
            {
            	string_literal3 = (IToken)input.LT(1);
            	Match(input,24,FOLLOW_24_in_declaracion_api155); 
            	stream_24.Add(string_literal3);

            	PushFollow(FOLLOW_tipo_in_declaracion_api157);
            	tipo4 = tipo();
            	followingStackPointer_--;
            	
            	stream_tipo.Add(tipo4.Tree);
            	IDENT5 = (IToken)input.LT(1);
            	Match(input,IDENT,FOLLOW_IDENT_in_declaracion_api159); 
            	stream_IDENT.Add(IDENT5);

            	char_literal6 = (IToken)input.LT(1);
            	Match(input,25,FOLLOW_25_in_declaracion_api161); 
            	stream_25.Add(char_literal6);

            	PushFollow(FOLLOW_lista_decl_in_declaracion_api163);
            	lista_decl7 = lista_decl();
            	followingStackPointer_--;
            	
            	stream_lista_decl.Add(lista_decl7.Tree);
            	char_literal8 = (IToken)input.LT(1);
            	Match(input,26,FOLLOW_26_in_declaracion_api165); 
            	stream_26.Add(char_literal8);

            	char_literal9 = (IToken)input.LT(1);
            	Match(input,27,FOLLOW_27_in_declaracion_api167); 
            	stream_27.Add(char_literal9);

            	
            	     if(!symtable.ContainsKey(IDENT5.Text))
            	     {
            	           symtable.Add(IDENT5.Text, new Symbol(input.ToString(tipo4.start,tipo4.stop), -1));
            	     }
            	     
            	
            	// AST REWRITE
            	// elements:          tipo, IDENT
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	retval.tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
            	
            	root_0 = (FkvmAST)adaptor.GetNilNode();
            	// 70:8: -> ^( DECLARACIONAPI tipo IDENT )
            	{
            	    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:70:11: ^( DECLARACIONAPI tipo IDENT )
            	    {
            	    FkvmAST root_1 = (FkvmAST)adaptor.GetNilNode();
            	    root_1 = (FkvmAST)adaptor.BecomeRoot(adaptor.Create(DECLARACIONAPI, "DECLARACIONAPI"), root_1);
            	    
            	    adaptor.AddChild(root_1, stream_tipo.Next());
            	    adaptor.AddChild(root_1, stream_IDENT.Next());
            	    
            	    adaptor.AddChild(root_0, root_1);
            	    }
            	
            	}
            	

            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (FkvmAST)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end declaracion_api

    public class principal_return : ParserRuleReturnScope 
    {
        internal FkvmAST tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start principal
    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:72:1: principal : 'program' tipo IDENT '{' lista_instrucciones '}' ;
    public principal_return principal() // throws RecognitionException [1]
    {   
        principal_return retval = new principal_return();
        retval.start = input.LT(1);
        
        FkvmAST root_0 = null;
    
        IToken string_literal10 = null;
        IToken IDENT12 = null;
        IToken char_literal13 = null;
        IToken char_literal15 = null;
        tipo_return tipo11 = null;

        lista_instrucciones_return lista_instrucciones14 = null;
        
        
        FkvmAST string_literal10_tree=null;
        FkvmAST IDENT12_tree=null;
        FkvmAST char_literal13_tree=null;
        FkvmAST char_literal15_tree=null;
    
        try 
    	{
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:72:11: ( 'program' tipo IDENT '{' lista_instrucciones '}' )
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:72:13: 'program' tipo IDENT '{' lista_instrucciones '}'
            {
            	root_0 = (FkvmAST)adaptor.GetNilNode();
            
            	string_literal10 = (IToken)input.LT(1);
            	Match(input,28,FOLLOW_28_in_principal188); 
            	string_literal10_tree = (FkvmAST)adaptor.Create(string_literal10);
            	root_0 = (FkvmAST)adaptor.BecomeRoot(string_literal10_tree, root_0);

            	PushFollow(FOLLOW_tipo_in_principal191);
            	tipo11 = tipo();
            	followingStackPointer_--;
            	
            	adaptor.AddChild(root_0, tipo11.Tree);
            	IDENT12 = (IToken)input.LT(1);
            	Match(input,IDENT,FOLLOW_IDENT_in_principal193); 
            	IDENT12_tree = (FkvmAST)adaptor.Create(IDENT12);
            	adaptor.AddChild(root_0, IDENT12_tree);

            	char_literal13 = (IToken)input.LT(1);
            	Match(input,29,FOLLOW_29_in_principal195); 
            	PushFollow(FOLLOW_lista_instrucciones_in_principal198);
            	lista_instrucciones14 = lista_instrucciones();
            	followingStackPointer_--;
            	
            	adaptor.AddChild(root_0, lista_instrucciones14.Tree);
            	char_literal15 = (IToken)input.LT(1);
            	Match(input,30,FOLLOW_30_in_principal200); 
            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (FkvmAST)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end principal

    public class lista_instrucciones_return : ParserRuleReturnScope 
    {
        internal FkvmAST tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start lista_instrucciones
    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:1: lista_instrucciones : (lista+= instruccion )* -> ^( LISTAINSTRUCCIONES ( $lista)* ) ;
    public lista_instrucciones_return lista_instrucciones() // throws RecognitionException [1]
    {   
        lista_instrucciones_return retval = new lista_instrucciones_return();
        retval.start = input.LT(1);
        
        FkvmAST root_0 = null;
    
        IList list_lista = null;
        RuleReturnScope lista = null;
        RewriteRuleSubtreeStream stream_instruccion = new RewriteRuleSubtreeStream(adaptor,"rule instruccion");
        try 
    	{
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:21: ( (lista+= instruccion )* -> ^( LISTAINSTRUCCIONES ( $lista)* ) )
            // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:23: (lista+= instruccion )*
            {
            	// D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:23: (lista+= instruccion )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);
            	    
            	    if ( ((LA2_0 >= IDENT && LA2_0 <= LIT_LOGICO) || LA2_0 == 25 || LA2_0 == 33 || (LA2_0 >= 35 && LA2_0 <= 41) || (LA2_0 >= 50 && LA2_0 <= 51) || LA2_0 == 54) )
            	    {
            	        alt2 = 1;
            	    }
            	    
            	
            	    switch (alt2) 
            		{
            			case 1 :
            			    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:24: lista+= instruccion
            			    {
            			    	PushFollow(FOLLOW_instruccion_in_lista_instrucciones213);
            			    	lista = instruccion();
            			    	followingStackPointer_--;
            			    	
            			    	stream_instruccion.Add(lista.Tree);
            			    	if (list_lista == null) list_lista = new ArrayList();
            			    	list_lista.Add(lista);

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop2;
            	    }
            	} while (true);
            	
            	loop2:
            		;	// Stops C# compiler whinging that label 'loop2' has no statements

            	
            	// AST REWRITE
            	// elements:          lista
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  lista
            	retval.tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
            	RewriteRuleSubtreeStream stream_lista = new RewriteRuleSubtreeStream(adaptor, "token lista", list_lista);
            	root_0 = (FkvmAST)adaptor.GetNilNode();
            	// 74:45: -> ^( LISTAINSTRUCCIONES ( $lista)* )
            	{
            	    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:48: ^( LISTAINSTRUCCIONES ( $lista)* )
            	    {
            	    FkvmAST root_1 = (FkvmAST)adaptor.GetNilNode();
            	    root_1 = (FkvmAST)adaptor.BecomeRoot(adaptor.Create(LISTAINSTRUCCIONES, "LISTAINSTRUCCIONES"), root_1);
            	    
            	    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:74:69: ( $lista)*
            	    while ( stream_lista.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, ((ParserRuleReturnScope)stream_lista.Next()).Tree);
            	    
            	    }
            	    stream_lista.Reset();
            	    
            	    adaptor.AddChild(root_0, root_1);
            	    }
            	
            	}
            	

            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (FkvmAST)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end lista_instrucciones

    public class instruccion_return : ParserRuleReturnScope 
    {
        internal FkvmAST tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start instruccion
    // D:\\Proyectos\\ProyectosVS\\FKVM\\FKVM\\src\\antlr\\FKVM.g:76:1: instruccion : ( inst_decl | inst_asig | inst_if | inst_while | inst_return | inst_expr );
    public instruccion_return instruccion() // throws RecognitionException [1]
    {   
        instruccion_return retval = new instruccion_return();
        retval.start = input.LT(1);
        
        FkvmAST root_0 = null;
    
        inst_decl_return inst_decl16 = null;

        inst_asig_return inst_asig17 = null;

        inst_if_return inst_if18 = null;

        inst_while_return inst_while19 = null;

        inst_return_return inst_return20 = null;
